--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,12 @@ body{
 }
 .container{
     max-width: 1158px;
-    padding: 0 15px;
+    padding: 0 15px 0 15px;
     box-sizing: border-box;
     margin: 0  auto;
+}
+img {
+    display: block;
 }
 /* HEADER */
 a{
@@ -28,7 +31,7 @@ ul{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 24px 15px;
+    padding: 24px 0 24px 0;
 }
 .logo{
     font-family: "Raleway", sans-serif;
@@ -38,6 +41,7 @@ ul{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    margin-right: 76px;
     
 }
 .logo-header{
@@ -98,11 +102,11 @@ a.list-header:hover, a.list-header:focus{
 /* ПЕРВАЯ СЕКЦИЯ */
 .studio{
     background-color: #2e2f42;
-           
+    padding: 188px 0;       
 }
 
 .container-main-studio {
-    padding: 188px 0px;
+    /* padding: 188px 0px; */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -118,7 +122,7 @@ a.list-header:hover, a.list-header:focus{
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
-    max-width: 500px;
+    max-width: 496px;
     margin: 0;
     
 }
@@ -135,7 +139,8 @@ a.list-header:hover, a.list-header:focus{
     padding: 16px 32px;
     border-radius: 4px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15); 
-    border: 0;     
+    border: 0;  
+    min-width: 169px;   
 }
 
 .button:focus, .button:hover{
@@ -144,7 +149,10 @@ a.list-header:hover, a.list-header:focus{
 /* ВТОРАЯ СЕКИЯ */
 .container-main-portfolio{
     display: flex;
-    padding: 120px 15px;
+    
+}
+.portfolio{
+    padding: 120px 0;
 }
 .portfolio-list {
     display: flex;
@@ -185,13 +193,12 @@ a.list-header:hover, a.list-header:focus{
 }
 /* ТРЕТЬЯ СЕКИЯ */
 .container-main-contacts{
-    padding: 120px 15px;
-    gap: 72px;
     display: flex;
     flex-direction: column;
 }
 .contacts{
-    background: #f4f4fd;    
+    background: #f4f4fd; 
+    padding: 120px 0;   
 }
 .contacts-list{
     display: flex;
@@ -217,6 +224,10 @@ a.list-header:hover, a.list-header:focus{
     text-transform: capitalize;
     color: #2e2f42;
     margin: 0;
+    margin-bottom: 72px;
+}
+.contacts-container-info{
+    padding: 32px 0;
 }
 .contacts-h-three-team{
     font-weight: 500;
@@ -226,6 +237,8 @@ a.list-header:hover, a.list-header:focus{
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
+    margin: 0;
+    margin-bottom: 8px;
 }
 .contacts-info{
     font-weight: 400;
@@ -236,13 +249,16 @@ a.list-header:hover, a.list-header:focus{
     letter-spacing: 0.02em;
     text-align: center;
     color: #434455;
+    margin: 0;
 }
 /* ЧЕТВЕРТАЯ СЕКИЯ */
 .container-main-ourportfolio{
-    padding: 120px 15px;
-    gap: 72px;
+    /* gap: 72px; */
     display: flex;
     flex-direction: column;
+}
+.port{
+    padding: 120px 0 120px 0;
 }
 .port-list{
     display: flex;
@@ -264,6 +280,7 @@ a.list-header:hover, a.list-header:focus{
     color: #2e2f42;
     text-transform: capitalize;
     margin: 0;
+    margin-bottom: 72px;
 }
 .h-three-port{
     font-weight: 500;
@@ -274,6 +291,7 @@ a.list-header:hover, a.list-header:focus{
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin: 0;
+    margin-bottom: 8px
 }
 .port-info-container{
     display: flex;
@@ -281,7 +299,6 @@ a.list-header:hover, a.list-header:focus{
     border-bottom: 1px solid #e7e9fc;
     border-left: 1px solid #e7e9fc;
     border-right: 1px solid #e7e9fc;
-    gap: 8px;
     padding: 32px 16px;
 }
 .port-info{
@@ -296,12 +313,11 @@ a.list-header:hover, a.list-header:focus{
 }
 /* ФУТЕР СЕКИЯ */
 .container-footer{
-    max-width: 264px;
-    padding: 100px 0;
-    
+    max-width: 264px;    
 }
 .box-footer{
     background: #2e2f42;
+    padding: 100px 0;
 }
 .logo-footer{
     font-weight: 700;
